tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr41463.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/pr41463.c" (c, x86_64-unknown-linux-gnu)
global global : rec_tree_node = zero [external, default, align 8, dso_local]

fn foo(%arg0: rec_tree_node*, %arg1: s32i) -> rec_tree_node* [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: rec_tree_node*, %arg1: s32i):
        %15 = alloca rec_tree_node*, "p", align 8
        %16 = alloca s32i, "i", align 4
        %17 = alloca rec_tree_node*, "__retval", align 8
        %18 = alloca rec_tree_node**, "q", align 8
        store %arg0, %15
        store %arg1, %16
        %19 = const #cir.ptr<null> : rec_tree_node*
        %20 = load %16 : s32i, align 4
        %21 = cast(integral) %20 : s64i
        %22 = load %15 : rec_tree_node*, align 8
        %23 = get_member %22[1] "vec" : rec_tree_vec*
        %24 = get_member %23[2] "a" : rec_tree_node*[1]*
        %25 = get_element %24[%21] : rec_tree_node**
        store %19, %25, align 8
        %26 = const 1 : s64i
        %27 = load %15 : rec_tree_node*, align 8
        %28 = get_member %27[1] "vec" : rec_tree_vec*
        %29 = get_member %28[2] "a" : rec_tree_node*[1]*
        %30 = get_element %29[%26] : rec_tree_node**
        store %30, %18, align 8
        %31 = get_global @global : rec_tree_node*
        %32 = load %18 : rec_tree_node**, align 8
        store %31, %32, align 8
        %33 = load %16 : s32i, align 4
        %34 = cast(integral) %33 : s64i
        %35 = load %15 : rec_tree_node*, align 8
        %36 = get_member %35[1] "vec" : rec_tree_vec*
        %37 = get_member %36[2] "a" : rec_tree_node*[1]*
        %38 = get_element %37[%34] : rec_tree_node**
        %39 = load %38 : rec_tree_node*, align 8
        store %39, %17
        %40 = load %17 : rec_tree_node*
        return %40
}
fn malloc(%arg0: u64i) -> void* [external, c, nothrow];
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca rec_tree_node*, "p", align 8
    %2 = const 0 : s32i
    store %2, %0
    %3 = get_global @malloc : ((u64i) -> void*)*
    %4 = const 96 : u64i
    %5 = call @malloc(%4) : void* [all]
    %6 = cast(bitcast) %5 : rec_tree_node*
    store %6, %1, align 8
    scope {
        %9 = load %1 : rec_tree_node*, align 8
        %10 = const 1 : s32i
        %11 = call @foo(%9, %10) : rec_tree_node* [all]
        %12 = get_global @global : rec_tree_node*
        %13 = cmp ne %11, %12 : bool
        if %13 {
            %14 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %7 = const 0 : s32i
    store %7, %0
    %8 = load %0 : s32i
    return %8
}
