tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr41750.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/pr41750.c" (c, x86_64-unknown-linux-gnu)
global hash : rec_foo_link_hash_table = zero [external, default, align 8, dso_local]
global link_info : rec_foo_link_info = zero [external, default, align 8, dso_local]
global abfd : s32i = 0 [external, default, align 4, dso_local]

fn foo_create_got_section(%arg5: s32i*, %arg6: rec_foo_link_info*) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg5: s32i*, %arg6: rec_foo_link_info*):
        %56 = alloca s32i*, "abfd", align 8
        %57 = alloca rec_foo_link_info*, "info", align 8
        %58 = alloca s32i, "__retval", align 4
        store %arg5, %56
        store %arg6, %57
        %59 = load %56 : s32i*, align 8
        %60 = load %57 : rec_foo_link_info*, align 8
        %61 = get_member %60[0] "hash" : rec_foo_link_hash_table**
        %62 = load %61 : rec_foo_link_hash_table*, align 8
        %63 = get_member %62[2] "sgot" : s32i**
        store %59, %63, align 8
        %64 = const 1 : s32i
        store %64, %58
        %65 = load %58 : s32i
        return %65
}
fn get_got(%arg2: s32i*, %arg3: rec_foo_link_info*, %arg4: rec_foo_link_hash_table*) -> s32i* [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg2: s32i*, %arg3: rec_foo_link_info*, %arg4: rec_foo_link_hash_table*):
        %23 = alloca s32i*, "abfd", align 8
        %24 = alloca rec_foo_link_info*, "info", align 8
        %25 = alloca rec_foo_link_hash_table*, "hash", align 8
        %26 = alloca s32i*, "__retval", align 8
        %27 = alloca s32i*, "got", align 8
        %28 = alloca s32i*, "dynobj", align 8
        store %arg2, %23
        store %arg3, %24
        store %arg4, %25
        %29 = load %25 : rec_foo_link_hash_table*, align 8
        %30 = get_member %29[2] "sgot" : s32i**
        %31 = load %30 : s32i*, align 8
        store %31, %27, align 8
        scope {
            %34 = load %27 : s32i*, align 8
            %35 = cast(ptr_to_bool) %34 : bool
            %36 = not %35 : bool
            if %36 {
                %37 = load %25 : rec_foo_link_hash_table*, align 8
                %38 = get_member %37[1] "dynobj" : s32i**
                %39 = load %38 : s32i*, align 8
                store %39, %28, align 8
                scope {
                    %50 = load %28 : s32i*, align 8
                    %51 = cast(ptr_to_bool) %50 : bool
                    %52 = not %51 : bool
                    if %52 {
                        %53 = load %23 : s32i*, align 8
                        store %53, %28, align 8
                        %54 = load %25 : rec_foo_link_hash_table*, align 8
                        %55 = get_member %54[1] "dynobj" : s32i**
                        store %53, %55, align 8
                        yield
                    }
                    yield
                }
                scope {
                    %43 = load %28 : s32i*, align 8
                    %44 = load %24 : rec_foo_link_info*, align 8
                    %45 = call @foo_create_got_section(%43, %44) : s32i [all]
                    %46 = cast(int_to_bool) %45 : bool
                    %47 = not %46 : bool
                    if %47 {
                        %48 = const #cir.ptr<null> : s32i*
                        store %48, %26
                        %49 = load %26 : s32i*
                        return %49
                    }
                    yield
                }
                %40 = load %25 : rec_foo_link_hash_table*, align 8
                %41 = get_member %40[2] "sgot" : s32i**
                %42 = load %41 : s32i*, align 8
                store %42, %27, align 8
                yield
            }
            yield
        }
        %32 = load %27 : s32i*, align 8
        store %32, %26
        %33 = load %26 : s32i*
        return %33
}
fn elf64_ia64_check_relocs(%arg0: s32i*, %arg1: rec_foo_link_info*) -> s32i* [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i*, %arg1: rec_foo_link_info*):
        %13 = alloca s32i*, "abfd", align 8
        %14 = alloca rec_foo_link_info*, "info", align 8
        %15 = alloca s32i*, "__retval", align 8
        store %arg0, %13
        store %arg1, %14
        %16 = load %13 : s32i*, align 8
        %17 = load %14 : rec_foo_link_info*, align 8
        %18 = load %14 : rec_foo_link_info*, align 8
        %19 = get_member %18[0] "hash" : rec_foo_link_hash_table**
        %20 = load %19 : rec_foo_link_hash_table*, align 8
        %21 = call @get_got(%16, %17, %20) : s32i* [all]
        store %21, %15
        %22 = load %15 : s32i*
        return %22
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = get_global @hash : rec_foo_link_hash_table*
    %3 = get_global @link_info : rec_foo_link_info*
    %4 = get_member %3[0] "hash" : rec_foo_link_hash_table**
    store %2, %4, align 8
    scope {
        %7 = get_global @abfd : s32i*
        %8 = get_global @link_info : rec_foo_link_info*
        %9 = call @elf64_ia64_check_relocs(%7, %8) : s32i* [all]
        %10 = get_global @abfd : s32i*
        %11 = cmp ne %9, %10 : bool
        if %11 {
            %12 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %5 = const 0 : s32i
    store %5, %0
    %6 = load %0 : s32i
    return %6
}
