tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr41919.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/pr41919.c" (c, x86_64-unknown-linux-gnu)
global __const.foo.__retval : rec_S1 = {1} [cir_private, default, dso_local, constant]
global g_23 : s32i = 0 [external, default, align 4, dso_local]

fn foo() -> s8i [internal, c, no_inline, dso_local, nothrow] {
    %43 = alloca rec_S1, "coerce", align 1
    %44 = alloca rec_S1, "__retval", align 1
    %45 = alloca s32i*, "l_100", align 8
    %46 = alloca s32i**, "l_110", align 8
    %47 = get_global @g_23 : s32i*
    store %47, %45, align 8
    store %45, %46, align 8
    %48 = get_global @__const.foo.__retval : rec_S1*
    copy %44, %48
    scope {
        %82 = load %45 : s32i*, align 8
        %83 = get_global @g_23 : s32i*
        %84 = cmp eq %82, %83 : bool
        %85 = not %84 : bool
        if %85 {
            %86 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %77 = load %45 : s32i*, align 8
        %78 = get_global @g_23 : s32i*
        %79 = cmp eq %77, %78 : bool
        %80 = not %79 : bool
        if %80 {
            %81 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %72 = load %45 : s32i*, align 8
        %73 = get_global @g_23 : s32i*
        %74 = cmp eq %72, %73 : bool
        %75 = not %74 : bool
        if %75 {
            %76 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %67 = load %45 : s32i*, align 8
        %68 = get_global @g_23 : s32i*
        %69 = cmp eq %67, %68 : bool
        %70 = not %69 : bool
        if %70 {
            %71 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %62 = load %45 : s32i*, align 8
        %63 = get_global @g_23 : s32i*
        %64 = cmp eq %62, %63 : bool
        %65 = not %64 : bool
        if %65 {
            %66 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %57 = load %45 : s32i*, align 8
        %58 = get_global @g_23 : s32i*
        %59 = cmp eq %57, %58 : bool
        %60 = not %59 : bool
        if %60 {
            %61 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %52 = load %45 : s32i*, align 8
        %53 = get_global @g_23 : s32i*
        %54 = cmp eq %52, %53 : bool
        %55 = not %54 : bool
        if %55 {
            %56 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %49 = load %44 : rec_S1
    store %49, %43
    %50 = cast(bitcast) %43 : s8i*
    %51 = load %50 : s8i
    return %51
}
fn bar(%arg0: s8i, %arg1: s8i) -> s8i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s8i, %arg1: s8i):
        %27 = alloca s8i, "si1", align 1
        %28 = alloca s8i, "si2", align 1
        %29 = alloca s8i, "__retval", align 1
        store %arg0, %27
        store %arg1, %28
        %30 = load %27 : s8i, align 1
        %31 = cast(integral) %30 : s32i
        %32 = const 0 : s32i
        %33 = cmp le %31, %32 : bool
        %34 = ternary %33 ? { : s32i
            %41 = load %27 : s8i, align 1
            %42 = cast(integral) %41 : s32i
            yield %42
        } : {
            %37 = load %28 : s8i, align 1
            %38 = cast(integral) %37 : s32i
            %39 = const 2 : s32i
            %40 = mul %38, %39 : s32i [nsw]
            yield %40
        }
        %35 = cast(integral) %34 : s8i
        store %35, %29
        %36 = load %29 : s8i
        return %36
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s8i, "coerce", align 1
    %1 = alloca s32i, "__retval", align 4
    %2 = alloca rec_S1, "s", align 1
    %3 = const 0 : s32i
    store %3, %1
    %4 = call @foo() : s8i [all]
    store %4, %0
    %5 = cast(bitcast) %0 : rec_S1*
    %6 = load %5 : rec_S1
    store %6, %2, align 1
    scope {
        %9 = const 153 : s32i
        %10 = get_member %2[0] "f0" : s8i*
        %11 = load %10 : s8i, align 1
        %12 = cast(integral) %11 : s32i
        %13 = cast(int_to_bool) %12 : bool
        %14 = ternary %13 ? { : bool
            %25 = const 1 : s32i
            %26 = cast(int_to_bool) %25 : bool
            yield %26
        } : {
            %24 = const #false : bool
            yield %24
        }
        %15 = cast(bool_to_int) %14 : s32i
        %16 = xor %15, %9 : s32i
        %17 = cast(integral) %16 : s8i
        %18 = const 1 : s8i
        %19 = call @bar(%17, %18) : s8i [all]
        %20 = cast(integral) %19 : s32i
        %21 = const -104 : s32i
        %22 = cmp ne %20, %21 : bool
        if %22 {
            %23 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %7 = const 0 : s32i
    store %7, %1
    %8 = load %1 : s32i
    return %8
}
