tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr42142.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/pr42142.c" (c, x86_64-unknown-linux-gnu)
global __const.sort.end : s32i[2] = [10, 10] [cir_private, default, dso_local, constant]

fn sort(%arg0: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %9 = alloca s32i, "L", align 4
        %10 = alloca s32i, "__retval", align 4
        %11 = alloca s32i[2], "end", align 4
        %12 = alloca s32i, "i", align 4
        %13 = alloca s32i, "R", align 4
        store %arg0, %9
        %14 = get_global @__const.sort.end : s32i[2]*
        copy %11, %14
        %15 = const 0 : s32i
        store %15, %12, align 4
        scope {
            while {
                %37 = load %12 : s32i, align 4
                %38 = const 2 : s32i
                %39 = cmp lt %37, %38 : bool
                condition %39
            } do {
                scope {
                    %18 = load %12 : s32i, align 4
                    %19 = cast(integral) %18 : s64i
                    %20 = get_element %11[%19] : s32i*
                    %21 = load %20 : s32i, align 4
                    store %21, %13, align 4
                    scope {
                        %22 = load %9 : s32i, align 4
                        %23 = load %13 : s32i, align 4
                        %24 = cmp lt %22, %23 : bool
                        if %24 {
                            %25 = const 1 : s32i
                            %26 = load %12 : s32i, align 4
                            %27 = const 1 : s32i
                            %28 = add %26, %27 : s32i [nsw]
                            %29 = cast(integral) %28 : s64i
                            %30 = get_element %11[%29] : s32i*
                            store %25, %30, align 4
                            %31 = const 10 : s32i
                            %32 = load %12 : s32i, align 4
                            %33 = cast(integral) %32 : s64i
                            %34 = get_element %11[%33] : s32i*
                            store %31, %34, align 4
                            %35 = load %12 : s32i, align 4
                            %36 = inc %35 : s32i [nsw]
                            store %36, %12, align 4
                            yield
                        } else {
                            break
                        }
                        yield
                    }
                    yield
                }
                yield
            }
            yield
        }
        %16 = load %12 : s32i, align 4
        store %16, %10
        %17 = load %10 : s32i
        return %17
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %4 = const 5 : s32i
        %5 = call @sort(%4) : s32i [all]
        %6 = const 1 : s32i
        %7 = cmp ne %5, %6 : bool
        if %7 {
            %8 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %2 = const 0 : s32i
    store %2, %0
    %3 = load %0 : s32i
    return %3
}
